Run setup.py check

--- a/.github/workflows/pypi-upload.yml
+++ b/.github/workflows/pypi-upload.yml
@@ -23,6 +23,8 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
+          python setup.py check -ms
           python setup.py sdist bdist_wheel
+          twine --version
           twine check dist/*
           twine upload dist/*
