--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,19 @@
 [mypy]
+python_version = 3.8
+
 follow_imports = silent
 strict_optional = True
-warn_redundant_casts = True
 
+show_column_numbers = True
 check_untyped_defs = True
 disallow_any_generics = True
 disallow_untyped_defs = True
+warn_redundant_casts = True
 warn_unused_ignores = True
+warn_unused_configs = True
 
-[mypy-aioredis]
+[mypy-aioredis.*]
+ignore_missing_imports = True
+
+[mypy-setuptools.*]
 ignore_missing_imports = True
