--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 black isort mypy pytest pytest-cov pytest-asyncio codecov
+          pip install flake8 black isort mypy pytest pytest-cov pytest-asyncio codecov msgpack ujson
           pip install -r requirements.txt
           pip install .
       - name: Lint
