Fix coverage target

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
           redis-version: ${{ matrix.redis-version }}
       - name: Test
         run: |
-          pytest --cov --cov-report=xml
+          pytest --cov=arpq --cov-report=xml
       - name: Publish coverage
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
