--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/ci.txt
-          pip install .
       - name: Lint
         run: |
           mypy .
@@ -38,7 +37,7 @@ jobs:
           redis-version: ${{ matrix.redis-version }}
       - name: Test
         run: |
-          pytest --cov=arpq --cov-report=xml
+          python -m pytest --cov=arpq --cov-report=xml
       - name: Publish coverage
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
